<resources>
    <string name="app_name">Campus</string>
    <string name="chat_fragment_friends">我的好友</string>
    <string name="user_center_setting">Settings</string>
    <string name="user_center_account">Account</string>
    <string name="user_name_over_length">名字过长，请重新设置！</string>
    <string name="current_popular_text">当前热门商品</string>
    <string name="course_detail_comment_hint">写下我的评论···</string>
    <string name="course_detail_comment_frequency">考勤频率</string>
    <string name="course_detail_comment_attendance_way">考勤方式</string>
    <string name="course_detail_comment_exam_way">考核方式</string>
    <string name="course_detail_comment_given">给分情况</string>
    <string name="course_detail_comment_credit">学分</string>
    <string name="course_detail_comment_score">我给它的评分(0~100)</string>
    <string name="course_detail_comment_evaluate_word">我的总体评价</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="login">登录</string>
    <string name="sign_up">注册</string>
    <string name="search">搜索</string>
    <string name="add">添加</string>
    <string name="is_stored">是否保存草稿？</string>
    <string name="user_center_login_welcome_text">你好，欢迎加入Campus!</string>
    <string name="user_center_login_create_text">请创建一个账号</string>
    <string name="user_center_login_input_text">请输入账号</string>
    <string name="user_center_login_hint_user_name">请输入您的昵称</string>
    <string name="user_center_login_hint_password_text">请输入密码</string>
    <string name="user_center_login_password_equal">两次密码不一致</string>
    <string name="user_center_login_exchange_login_text">已有账号？</string>
    <string name="user_center_login_exchange_sign_text">没有账号？</string>
    <string name="user_center_not_login_text">您还未登录，请先登录！</string>
    <string name="user_center_password_mention_null">密码不能位空！</string>
    <string name="user_center_account_mention_null">账号不能位空！</string>
    <string name="user_center_account_mention">账号长度至少为6位，由字母、数字和特殊字符组成,且第一个字符必须是字母</string>
    <string name="user_center_password_mention">密码长度至少为8位，由字母、数字和特殊字符组成，且必须包含数字和字母</string>
    <string name="user_center_email_mention">邮箱有误！</string>
    <string name="user_center_user_name_mention">昵称有误，最长不超过20个字符！</string>
    <string name="user_center_home_edit_msg">编辑资料</string>
    <string name="save">保存</string>
    <string name="book_deal_detail_chat">私聊</string>
    <string name="request_error">发生未知错误，请重试！</string>
    <string name="request_net_error">网络错误，请重试！</string>
    <string name="login_request_no_such_account">账号不存在，请注册或重试！</string>
    <string name="login_request_password_error">账号或密码错误，请重试！</string>
    <string name="login_request_account_exist">账号已被注册，请重新输入！</string>
    <string name="login_request_sign_up_succeed">注册成功！</string>
    <string name="course_detail_review_publish_succeed">课程评论发表成功！</string>
    <string name="course_detail_review_has_published">你之前已经在此课程下发表过评论，无法重复评论！</string>
    <string name="login_request_delete_account_succeed">删除账号成功！</string>
    <string name="login_request_edit_password_succeed">修改密码成功！</string>
    <string name="login_request_delete_account_fail">删除账号失败，请重试！</string>
    <string name="user_center_edit_psw_origin_hint">请输入原始密码</string>
    <string name="user_center_edit_psw_new_hint">请输入新密码</string>
    <string name="user_center_edit_psw_new_hint_again">请再次确认密码</string>
    <string name="menu_edit_review">修改评论</string>
    <string name="menu_delete_review">删除评论</string>
    <string name="menu_delete_chat">删除该聊天记录</string>
    <string name="menu_delete_friend">删除该好友</string>
    <string name="menu_top_friend">置顶该好友</string>
    <string name="add_friends_input_type">🔍 用户名/昵称</string>
    <string name="mention_save_success">保存成功！</string>
    <string name="find_friend_error_account">输入的用户名有误，请重新输入！</string>
    <string name="find_friend_error_account_not_exist">输入的用户名不存在</string>

</resources>