<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="25dp"
    android:layout_marginEnd="25dp"
    android:orientation="vertical"
    android:padding="10dp"
    android:paddingTop="5dp">

    <LinearLayout
        android:id="@+id/course_detail_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/course_detail_edit_frequency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/course_detail_comment_frequency"
                android:singleLine="true"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/course_detail_edit_attendance_way"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/course_detail_comment_attendance_way"
                android:singleLine="true"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/course_detail_edit_exam_way"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/course_detail_comment_exam_way"
                android:singleLine="true"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/course_detail_edit_exam_given"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/course_detail_comment_given"
                android:singleLine="true"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/course_detail_edit_credit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/course_detail_comment_credit"
                android:singleLine="true"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/course_detail_edit_course_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/course_detail_comment_score"
                android:singleLine="true"
                android:textSize="14sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/course_edit_evaluate_words"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/course_detail_comment_evaluate_word"
            android:textSize="14sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/course_category_add_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/course_category_add_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/course_category_add_teacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>

        <Spinner
            android:id="@+id/course_category_add_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@null"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp">

        <Button
            android:id="@+id/btn_course_detail_edit_cancel"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginStart="50dp"
            android:background="@drawable/btn_shape_reject"
            android:text="@string/cancel"
            android:textColor="@color/wechat_agree_green"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_course_detail_edit_confirm"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/btn_shape_agree"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>