<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="25dp"
    android:paddingEnd="25dp"
    android:orientation="vertical"
    android:background="@drawable/login_bg_no_scale">
    <ImageView
        android:id="@+id/btn_login_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_icon_back_black"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_center_login_welcome_text"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:layout_marginTop="170dp"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:id="@+id/login_text_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_center_login_create_text"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"/>
    <LinearLayout
        android:id="@+id/login_input_email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_input_shape"
        android:padding="15dp"
        android:layout_marginTop="20dp">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_icon_name_text"
            android:layout_gravity="center_vertical"/>
        <EditText
            android:id="@+id/login_input_input_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/input_no_frame"
            android:hint="@string/user_center_login_hint_user_name"
            android:layout_marginStart="5dp"/>
    </LinearLayout>
    <TextView
        android:id="@+id/email_mention"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_input_shape">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_icon_account"
            android:layout_gravity="center_vertical"/>
        <EditText
            android:id="@+id/login_input_create_account"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/input_no_frame"
            android:hint="@string/user_center_login_input_text"
            android:layout_marginStart="5dp" />
    </LinearLayout>
    <TextView
        android:id="@+id/account_mention"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_input_shape"
        android:padding="15dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_icon_password"
            android:layout_gravity="center_vertical"/>
        <EditText
            android:id="@+id/login_input_create_password"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:background="@drawable/input_no_frame"
            android:hint="@string/user_center_login_hint_password_text"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:inputType="textPassword"/>
        <ImageView
            android:id="@+id/password_display_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:src="@drawable/ic_icon_password_hide"/>

    </LinearLayout>
    <TextView
        android:id="@+id/password_mention"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp" />
    <Button
        android:id="@+id/login_btn"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:background="@drawable/login_or_sign_shape"
        android:padding="15dp"
        android:layout_marginTop="20dp"
        android:textSize="26sp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp">
        <TextView
            android:id="@+id/exchange_text_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_center_login_exchange_sign_text"/>
        <TextView
            android:id="@+id/exchange_text_login_or_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/deep_blue"
            android:text="@string/sign_up"/>
    </LinearLayout>

</LinearLayout>