<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">
    <TextView
        android:id="@+id/sava_dialog_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/is_stored"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp">
        <Button
            android:id="@+id/btn_course_detail_store_cancel"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginStart="50dp"
            android:text="@string/cancel"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/wechat_agree_green"
            android:background="@drawable/btn_shape_reject"/>
        <Button
            android:id="@+id/btn_course_detail_store_confirm"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:text="@string/confirm"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/btn_shape_agree"/>

    </LinearLayout>
</LinearLayout>