<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/btn_login_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/ic_icon_back_black"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginTop="60dp"
        android:padding="20dp">
        <TextView
            android:id="@+id/psw_edit_text_origin"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_center_edit_psw_origin_hint"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/edit_psw_origin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:inputType="textPassword"/>
        <TextView
            android:id="@+id/psw_edit_text_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:padding="5dp"
            android:text="@string/user_center_edit_psw_new_hint"
            android:textSize="20sp" />
        <EditText
            android:id="@+id/edit_psw_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:inputType="textPassword" />
        <TextView
            android:id="@+id/psw_edit_text_new_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:padding="5dp"
            android:text="@string/user_center_edit_psw_new_hint_again"
            android:textSize="20sp" />
        <EditText
            android:id="@+id/edit_psw_new_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_user_center_psw__edit"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_shape_agree"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"/>

</LinearLayout>